--- a/components/page-2/steps.html
+++ b/components/page-2/steps.html
@@ -152,8 +152,8 @@
 </style>
 
 <section class="relative !py-[70px] md:!py-[150px]" data-timeline aria-labelledby="timeline-title">
-  <img src="/imgs/environment/shape-1.svg" alt="" aria-hidden="true" class="pointer-events-none select-none absolute left-0 top-0 w-[500px] h-full object-contain" loading="lazy" />
-  <img src="/imgs/environment/shape-2.svg" alt="" aria-hidden="true" class=" max-md:hidden pointer-events-none select-none absolute right-0 bottom-[-600px] w-[300px] h-full object-contain" loading="lazy" />
+  <img src="./imgs/environment/shape-1.svg" alt="" aria-hidden="true" class="pointer-events-none select-none absolute left-0 top-0 w-[500px] h-full object-contain" loading="lazy" />
+  <img src="./imgs/environment/shape-2.svg" alt="" aria-hidden="true" class=" max-md:hidden pointer-events-none select-none absolute right-0 bottom-[-600px] w-[300px] h-full object-contain" loading="lazy" />
 
   <div class="container mb-[50px] md:!mb-[120px] ">
     <h1 data-i18n="env.timeline.title"  class="text-[40px] max-md:text-[20px] font-[600] text-black text-center  " >Environmental Highlights</h1>
