--- a/components/tlx-steps.html
+++ b/components/tlx-steps.html
@@ -161,7 +161,7 @@
 
 <section class="relative !py-[150px]" data-tlx-timeline aria-labelledby="tlx-timeline-title">
   <!-- Optional side art (decorative) -->
-  <img src="/imgs/sec-3.png" alt="" aria-hidden="true" class="tlx-hero-art pointer-events-none select-none absolute left-0 top-0 w-[300px] h-full object-contain" loading="lazy" />
+  <img src="./imgs/sec-3.png" alt="" aria-hidden="true" class="tlx-hero-art pointer-events-none select-none absolute left-0 top-0 w-[300px] h-full object-contain" loading="lazy" />
 
   <div class="tlx-wrap">
     <h2 id="tlx-timeline-title" class="sr-only">Sustainability Pillars Timeline</h2>
