--- a/components/tlx-steps.html
+++ b/components/tlx-steps.html
@@ -175,7 +175,7 @@
       <div class="tlx-reveal">
         <p data-i18n="home.timeline.section6.title1" class="text-[22px] tlx-muted font-[500]">Spaces, programs, and engagement that invite community participation and shared value.</p>
 				<div class="flex items-center gap-2 mt-3 " >
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/1.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/1.png" />
 				</div>
       </div>
     </div>
@@ -186,8 +186,8 @@
       <div class="tlx-reveal">
         <p data-i18n="home.timeline.section6.title2" class="text-[22px] tlx-muted font-[500]">Efficiency, waste reduction, water stewardship, and biodiversity safeguards across operations.</p>
 				<div class="flex items-center gap-2 mt-3 " >
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/2.png" />
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/3.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/2.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/3.png" />
 				</div>
       </div>
     </div>
@@ -198,7 +198,7 @@
       <div class="tlx-reveal">
         <p data-i18n="home.timeline.section6.title3" class="text-[22px] tlx-muted font-[500]">Robust HSE systems, wellness programs, and a safe workplace culture.</p>
 				<div class="flex items-center gap-2 mt-3 " >
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/4.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/4.png" />
 				</div>
       </div>
     </div>
@@ -209,8 +209,8 @@
       <div class="tlx-reveal">
         <p data-i18n="home.timeline.section6.title4" class="text-[22px] tlx-muted font-[500]">Fair opportunities, representation, and inclusive leadership pathways.</p>
 				<div class="flex items-center gap-2 mt-3 " >
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/5.png" />
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/6.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/5.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/6.png" />
 				</div>
       </div>
     </div>
@@ -221,7 +221,7 @@
       <div class="tlx-reveal">
         <p data-i18n="home.timeline.section6.title5" class="text-[22px] tlx-muted font-[500]">Governance, risk management, and ongoing adherence to standards to future-proof growth.</p>
 				<div class="flex items-center gap-2 mt-3 " >
-					<img class="w-[80px]" alt="" src="../imgs/sec-5/7.png" />
+					<img class="w-[80px]" alt="" src="./imgs/sec-5/7.png" />
 				</div>
       </div>
     </div>
