--- a/components/impact.html
+++ b/components/impact.html
@@ -2,7 +2,7 @@
   <div class="min-w-[900px] relative container !px-8 lg:!px-16" style="padding: 0 60px !important">
     <!-- Matrix -->
     <div id="materiality-matrix" class="relative w-full h-[520px] sm:h-[580px] lg:h-[600px] rounded-xl bg-gradient-to-br from-green-50 via-white to-green-50" role="application" aria-label="Materiality Matrix">
-      <img src="../imgs/shapes-bg.svg" class="absolute inset-0 w-full h-full object-cover" alt="" aria-hidden="true" />
+      <img src="./imgs/shapes-bg.svg" class="absolute inset-0 w-full h-full object-cover" alt="" aria-hidden="true" />
 
       <!-- Axes -->
       <div class="pointer-events-none absolute inset-0" aria-hidden="true">
