--- a/components/header.html
+++ b/components/header.html
@@ -25,10 +25,10 @@
 
       <!-- Links -->
       <nav class="px-8 pt-10 space-y-10">
-        <a href="../index.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.home">Sustainability at Alandalus</a>
-        <a href="../environment.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.environment">Environmental stewardship</a>
-        <a href="../social.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.social">Social responsibility</a>
-        <a href="../governance.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.governance">Governance</a>
+        <a href="./index.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.home">Sustainability at Alandalus</a>
+        <a href="./environment.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.environment">Environmental stewardship</a>
+        <a href="./social.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.social">Social responsibility</a>
+        <a href="./governance.html" class="block text-[20px] leading-none text-white/95 hover:text-white transition" data-i18n="nav.governance">Governance</a>
       </nav>
     </aside>
 
