--- a/components/page-4/structure.html
+++ b/components/page-4/structure.html
@@ -30,10 +30,10 @@
 </style>
 
 <div class="relative">
-  <img src=".././imgs/governance/shape-1.svg" class="object-cover pointer-events-none absolute left-[-200px] top-[-200px] w-[800px] h-[800px]" />
-  <img src=".././imgs/governance/shape-2.svg" class="object-cover pointer-events-none absolute left-1/2 -translate-x-1/2 top-[-100px] w-[900px] h-[1200px]" />
-  <img src=".././imgs/governance/shape-3.svg" class="object-cover pointer-events-none absolute left-0 -translate-y-1/2 top-1/2 w-[1000px] h-[700px]" />
-  <img src=".././imgs/governance/shape-4.svg" class="object-cover z-[-1] pointer-events-none absolute inset-0 w-full h-full" />
+  <img src="././imgs/governance/shape-1.svg" class="object-cover pointer-events-none absolute left-[-200px] top-[-200px] w-[800px] h-[800px]" />
+  <img src="././imgs/governance/shape-2.svg" class="object-cover pointer-events-none absolute left-1/2 -translate-x-1/2 top-[-100px] w-[900px] h-[1200px]" />
+  <img src="././imgs/governance/shape-3.svg" class="object-cover pointer-events-none absolute left-0 -translate-y-1/2 top-1/2 w-[1000px] h-[700px]" />
+  <img src="././imgs/governance/shape-4.svg" class="object-cover z-[-1] pointer-events-none absolute inset-0 w-full h-full" />
 
   <div  class="container z-[10] relative !py-[70px]">
     <h1 class="capitalize text-[#0F0F0F] font-[600] text-[30px] md:text-[46px]" data-i18n="governance.title">organizational structure</h1>
